[gd_scene load_steps=7 format=3 uid="uid://hm17lkxgu75w"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_2784d"]
[ext_resource type="PackedScene" uid="uid://51swxtpv7jfb" path="res://components/options_cog.tscn" id="2_0n4o8"]
[ext_resource type="Texture2D" uid="uid://crtgjbdoocktr" path="res://assets/bg_main_menu.png" id="2_tfdo4"]
[ext_resource type="Theme" uid="uid://crcwqj3itilwv" path="res://components/theme.tres" id="3_du8xg"]
[ext_resource type="FontFile" uid="uid://cgw4qlayyi1n8" path="res://assets/fonts/Labrada-Bold.ttf" id="4_yrebx"]
[ext_resource type="PackedScene" uid="uid://di4hq8o3jhtwf" path="res://components/value_selector.tscn" id="5_rhrlq"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2784d")

[node name="Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="background" type="TextureRect" parent="Menu"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
mouse_filter = 0
texture = ExtResource("2_tfdo4")

[node name="OptionsTitle" type="RichTextLabel" parent="Menu"]
layout_mode = 0
offset_left = 105.0
offset_top = 26.0
offset_right = 706.0
offset_bottom = 128.0
mouse_filter = 2
theme = ExtResource("3_du8xg")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/bold_font = ExtResource("4_yrebx")
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[center][b]Options[/b][/center]"

[node name="CreditsTitle" type="RichTextLabel" parent="Menu"]
layout_mode = 0
offset_left = 106.0
offset_top = 318.0
offset_right = 707.0
offset_bottom = 420.0
mouse_filter = 2
theme = ExtResource("3_du8xg")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/bold_font = ExtResource("4_yrebx")
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[center][b]Credits[/b][/center]"

[node name="Credits" type="RichTextLabel" parent="Menu"]
layout_mode = 0
offset_left = 105.0
offset_top = 387.0
offset_right = 711.0
offset_bottom = 591.0
mouse_filter = 2
theme = ExtResource("3_du8xg")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("4_yrebx")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Font: \"Labrada\" designed by Mercedes JÃ¡uregui, Omnibus-Type
Music: 
- \"Awkward Meeting\"
- \"Colorless Aura\"
- \"Devonshire Waltz Allegretto\"
- \"Sad Trio\"
- \"Study And Relax\"
"

[node name="Credits2" type="RichTextLabel" parent="Menu"]
layout_mode = 0
offset_left = 352.0
offset_top = 425.0
offset_right = 734.0
offset_bottom = 581.0
mouse_filter = 2
theme = ExtResource("3_du8xg")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("4_yrebx")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "
    Kevin MacLeod (incompetech.com)
    Licensed under Creative Commons: 
        By Attribution 4.0 License
    http://creativecommons.org/licenses/by/4.0/"

[node name="TextSpeed" parent="Menu" instance=ExtResource("5_rhrlq")]
layout_mode = 1
offset_left = 162.0
offset_top = 118.0
offset_right = 122.0
offset_bottom = 78.0
field_text = "Text Speed:"

[node name="MusicVolume" parent="Menu" instance=ExtResource("5_rhrlq")]
layout_mode = 1
offset_left = 162.0
offset_top = 189.0
offset_right = 122.0
offset_bottom = 149.0
default_value_text = "[center]3"
field_text = "Music Volume:"

[node name="TextVolume" parent="Menu" instance=ExtResource("5_rhrlq")]
layout_mode = 1
offset_left = 162.0
offset_top = 262.0
offset_right = 122.0
offset_bottom = 222.0
default_value_text = "[center]3"
field_text = "Text Volume:"

[node name="OptionsCog" parent="." instance=ExtResource("2_0n4o8")]
layout_mode = 0
offset_left = 712.0
offset_right = 800.0
offset_bottom = 80.0
